# autoscoreNidra

./: .gitignore  README.md  algorithms.py  app.py  cli.py  scorer.py
.github/workflows/: build.yml
backend/: README.md  __init__.py  algorithms.py  cli.py  requirements.txt  scorer.py
backend/sleepgpt-main/: Finetune_mass_sp.sh  Finetune_shhs1.sh  Finetune_unify.sh  Kill_all_node.sh  Pt_conv_slurm.sh  Pt_unify.sh  Pt_unify_slurm.sh  README.md  Start_all_node.sh  Start_finetune_final.sh  Start_finetune_shhs1.sh  Start_ft_edf_955.sh  Start_ft_edf_TCC.sh  Start_ft_edf_mul.sh  Start_ft_edf_n2v.sh  Start_ft_edf_usleep.sh  Start_ft_mass_stage_p.sh  Start_ft_phy_usleep.sh  Start_ft_shhs.sh  Start_others.sh  Start_phy_test.sh  Start_pr_edf_955.sh  Start_unify.sh  Test_edf_2013.sh  Test_edf_2018.sh  Test_edf_2018_last.sh  Test_edf_955.sh  Test_edf_TCC.sh  Test_edf_aug_2013.sh  Test_edf_aug_2018.sh  Test_edf_mul.sh  Test_edf_n2v.sh  Test_edf_portion.sh  Test_edf_usleep.sh  Test_isruc_s1.sh  Test_mass_channel.sh  Test_mass_portion.sh  Test_mass_sp.sh  Test_mass_stage.sh  Test_nmse_loss.sh  (+44 more)
bridge/: Cargo.toml  README.md
bridge/include/: sleep_eeg.h
bridge/src/: edf.rs  lib.rs  morlet.rs  spectrogram.rs
frontend/: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
frontend/assets/: spectral.txt
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: edf_loader_test.dart  eeg_backend_wavelet_test.dart  mat_loader_test.dart  test_filter.dart  widget_test.dart
frontend/windows/: CMakeLists.txt  installer.iss
(+228 files in other folders)
